proxy-deploy-transformed.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Plantilla que crea un servicio Proxy escalable, altamente disponible
  y seguro
Parameters:
  IdUltimaAMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-arm64-gp2
  AWSAcademy:
    Type: String
    Description: Indica si se esta utilizando o AWS Academy Learner Labs para desplegar
      la pila o una cuenta normal de AWS
    AllowedValues:
    - SI
    - 'NO'
    Default: SI
Conditions:
  CuentaNormal:
    Fn::Equals:
    - Ref: AWSAcademy
    - 'NO'
Resources:
  Roles:
    Type: AWS::CloudFormation::Stack
    Condition: CuentaNormal
    Properties:
      TemplateURL: https://s3.us-east-1.amazonaws.com/cf-templates-10nirjwqdb22a-us-east-1/6629f1572284a6b4c0a99528b9622fe6.template
  VPCServicio:
    Type: AWS::CloudFormation::Stack
    Properties:
      Parameters:
        Nombre: Servicio
        VPC: 10.0.0.0/16
        SubredesPublicas: SI
        SubredesPrivadas: SI
        AZ: 2
        NATGateways: SI
        Bastion: 'NO'
        LearnerLab: SI
      TemplateURL: https://s3.us-east-1.amazonaws.com/cf-templates-10nirjwqdb22a-us-east-1/1aaabe0567b31a32bf6bd4fa2be97afc.template
      TimeoutInMinutes: 10
  VPCCliente:
    Type: AWS::CloudFormation::Stack
    Properties:
      Parameters:
        Nombre: Cliente
        VPC: 172.16.0.0/16
        SubredesPublicas: 'NO'
        SubredesPrivadas: SI
        AZ: 1
        NATGateways: 'NO'
        Bastion: 'NO'
        LearnerLab: SI
      TemplateURL: https://s3.us-east-1.amazonaws.com/cf-templates-10nirjwqdb22a-us-east-1/1aaabe0567b31a32bf6bd4fa2be97afc.template
      TimeoutInMinutes: 10
  Repositorio:
    Type: AWS::ECR::Repository
    DeletionPolicy: Retain
    Properties:
      EncryptionConfiguration:
        EncryptionType: AES256
  nlb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets:
      - Fn::GetAtt:
        - VPCServicio
        - Outputs.Privada1
      - Fn::GetAtt:
        - VPCServicio
        - Outputs.Privada2
      Scheme: internal
      Type: network
      LoadBalancerAttributes:
      - Key: load_balancing.cross_zone.enabled
        Value: 'true'
      Tags:
      - Key: Name
        Value:
          Fn::Sub:
          - nlb-${nombreVPC}
          - nombreVPC:
              Fn::GetAtt:
              - VPCServicio
              - Outputs.VPC
  tgProxy:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      TargetType: ip
      Protocol: TCP
      Port: 3128
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      VpcId:
        Fn::GetAtt:
        - VPCServicio
        - Outputs.VPC
      HealthCheckIntervalSeconds: 15
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: 60
  nlbListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn:
        Ref: nlb
      Port: 3128
      Protocol: TCP
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: tgProxy
  grupoSegBuilder:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::GetAtt:
        - VPCServicio
        - Outputs.VPC
      GroupDescription: Grupo de seguridad para la instancia EC2 builder. No permite
        trafico de entrada, se debe administrar mediante AWS SSM Session Manager
  grupoSegProxy:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::GetAtt:
        - VPCServicio
        - Outputs.VPC
      GroupDescription: Grupo de seguridad para el servicio Proxy
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: '3128'
        ToPort: '3128'
        IpProtocol: tcp
  proxyCluster:
    Type: AWS::ECS::Cluster
    Properties:
      CapacityProviders:
      - FARGATE
      - FARGATE_SPOT
      DefaultCapacityProviderStrategy:
      - CapacityProvider: FARGATE
        Weight: 1
      - CapacityProvider: FARGATE_SPOT
        Weight: 1
  proxyLogs:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 7
  proxyTask:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
      - Essential: true
        Image:
          Fn::Sub:
          - ${repo}:latest
          - repo:
              Fn::GetAtt:
              - Repositorio
              - RepositoryUri
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group:
              Ref: proxyLogs
            awslogs-region:
              Ref: AWS::Region
            awslogs-stream-prefix: ecs
        Name: squid
        PortMappings:
        - ContainerPort: 3128
          HostPort: 3128
          Protocol: tcp
      Cpu: '256'
      ExecutionRoleArn:
        Fn::If:
        - CuentaNormal
        - Fn::GetAtt:
          - Roles
          - Outputs.RolEjecTarea
        - Fn::Sub: arn:aws:iam::${AWS::AccountId}:role/LabRole
      Memory: '512'
      NetworkMode: awsvpc
      RuntimePlatform:
        OperatingSystemFamily: LINUX
        CpuArchitecture: ARM64
      RequiresCompatibilities:
      - FARGATE
  proxyService:
    Type: AWS::ECS::Service
    DependsOn: nlbListener
    Properties:
      PlatformVersion: LATEST
      LaunchType: FARGATE
      Cluster:
        Fn::GetAtt:
        - proxyCluster
        - Arn
      TaskDefinition:
        Ref: proxyTask
      DesiredCount: 4
      LoadBalancers:
      - ContainerName: squid
        ContainerPort: 3128
        TargetGroupArn:
          Ref: tgProxy
      NetworkConfiguration:
        AwsvpcConfiguration:
          SecurityGroups:
          - Ref: grupoSegProxy
          Subnets:
          - Fn::GetAtt:
            - VPCServicio
            - Outputs.Privada1
          - Fn::GetAtt:
            - VPCServicio
            - Outputs.Privada2
  proxyAutoScaling:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MaxCapacity: 10
      MinCapacity: 2
      ResourceId:
        Fn::Sub:
        - service/${cluster}/${servicio}
        - cluster:
            Ref: proxyCluster
          servicio:
            Fn::GetAtt:
            - proxyService
            - Name
      RoleARN:
        Fn::If:
        - CuentaNormal
        - Fn::GetAtt:
          - Roles
          - Outputs.RolAutoEscaladoServicio
        - Fn::Sub: arn:aws:iam::${AWS::AccountId}:role/LabRole
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
  proxyAutoScalingPolitica:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    DependsOn: proxyAutoScaling
    Properties:
      PolicyName: PoliticaEscaladoProxy
      PolicyType: TargetTrackingScaling
      ResourceId:
        Fn::Sub:
        - service/${cluster}/${servicio}
        - cluster:
            Ref: proxyCluster
          servicio:
            Fn::GetAtt:
            - proxyService
            - Name
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
      TargetTrackingScalingPolicyConfiguration:
        TargetValue: 65
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
  builder:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: IdUltimaAMI
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ''
      InstanceType: t4g.micro
      SecurityGroupIds:
      - Ref: grupoSegBuilder
      SubnetId:
        Fn::GetAtt:
        - VPCServicio
        - Outputs.Privada1
      IamInstanceProfile:
        Fn::If:
        - CuentaNormal
        - Fn::GetAtt:
          - Roles
          - Outputs.PerfilInstanciaBuilder
        - LabInstanceProfile
      UserData:
        Fn::Base64:
          Fn::Join:
          - ''
          - - "#!/bin/bash\n"
            - "yum update -y\n"
            - "amazon-linux-extras install docker -y\n"
            - "systemctl enable docker\n"
            - "systemctl start docker\n"
            - "wget https://aws-academy-practicas.s3.amazonaws.com/proxy/Dockerfile\
              \ -P /root\n"
            - "wget https://aws-academy-practicas.s3.amazonaws.com/proxy/entrypoint.sh\
              \ -P /root\n"
            - "wget https://aws-academy-practicas.s3.amazonaws.com/proxy/squid.conf\
              \ -P /root\n"
            - 'docker login -u AWS -p $(aws ecr get-login-password --region '
            - Ref: AWS::Region
            - ') '
            - Fn::GetAtt:
              - Repositorio
              - RepositoryUri
            - "\n"
            - "docker build -t proxy:latest /root/.\n"
            - 'docker tag proxy:latest '
            - Fn::GetAtt:
              - Repositorio
              - RepositoryUri
            - ":latest\n"
            - 'docker push '
            - Fn::GetAtt:
              - Repositorio
              - RepositoryUri
            - ":latest\n"
      Tags:
      - Key: Name
        Value:
          Fn::Sub:
          - proxy-builder-${nombreVPC}
          - nombreVPC:
              Fn::GetAtt:
              - VPCServicio
              - Outputs.VPC
  servicioPuntoEnlace:
    Type: AWS::EC2::VPCEndpointService
    DependsOn: proxyService
    Properties:
      AcceptanceRequired: false
      NetworkLoadBalancerArns:
      - Ref: nlb
  grupoSegPuntoEnlace:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::GetAtt:
        - VPCCliente
        - Outputs.VPC
      GroupDescription: Grupo de seguridad para el punto de enlace
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: '3128'
        ToPort: '3128'
        IpProtocol: tcp
  PuntoEnlace:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId:
        Fn::GetAtt:
        - VPCCliente
        - Outputs.VPC
      VpcEndpointType: Interface
      SecurityGroupIds:
      - Ref: grupoSegPuntoEnlace
      ServiceName:
        Fn::Sub:
        - com.amazonaws.vpce.${AWS::Region}.${sep}
        - sep:
            Ref: servicioPuntoEnlace
      SubnetIds:
      - Fn::GetAtt:
        - VPCCliente
        - Outputs.Privada1
  grupoSegCliente:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::GetAtt:
        - VPCCliente
        - Outputs.VPC
      GroupDescription: Grupo de seguridad para el punto de enlace
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        FromPort: '3128'
        ToPort: '3128'
        IpProtocol: tcp
  cliente:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: IdUltimaAMI
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ''
      InstanceType: t4g.micro
      SecurityGroupIds:
      - Ref: grupoSegCliente
      SubnetId:
        Fn::GetAtt:
        - VPCCliente
        - Outputs.Privada1
      IamInstanceProfile:
        Fn::If:
        - CuentaNormal
        - Fn::GetAtt:
          - Roles
          - Outputs.PerfilInstanciaSSM
        - LabInstanceProfile
      UserData:
        Fn::Base64:
          Fn::Join:
          - ''
          - - "#!/bin/bash\n"
            - export http_proxy=http://
            - Fn::Select:
              - '1'
              - Fn::Split:
                - ':'
                - Fn::Select:
                  - '0'
                  - Fn::GetAtt:
                    - PuntoEnlace
                    - DnsEntries
            - ":3128\n"
            - export https_proxy=http://
            - Fn::Select:
              - '1'
              - Fn::Split:
                - ':'
                - Fn::Select:
                  - '0'
                  - Fn::GetAtt:
                    - PuntoEnlace
                    - DnsEntries
            - ":3128\n"
            - echo "http_proxy=http://
            - Fn::Select:
              - '1'
              - Fn::Split:
                - ':'
                - Fn::Select:
                  - '0'
                  - Fn::GetAtt:
                    - PuntoEnlace
                    - DnsEntries
            - ":3128\" >> /etc/environment\n"
            - echo "https_proxy=http://
            - Fn::Select:
              - '1'
              - Fn::Split:
                - ':'
                - Fn::Select:
                  - '0'
                  - Fn::GetAtt:
                    - PuntoEnlace
                    - DnsEntries
            - ":3128\" >> /etc/environment\n"
            - "mkdir -p /etc/systemd/system/amazon-ssm-agent.service.d\n"
            - "cat <<EOF >/etc/systemd/system/amazon-ssm-agent.service.d/override.conf\n"
            - "[Service]\n"
            - Environment="http_proxy=http://
            - Fn::Select:
              - '1'
              - Fn::Split:
                - ':'
                - Fn::Select:
                  - '0'
                  - Fn::GetAtt:
                    - PuntoEnlace
                    - DnsEntries
            - ":3128\"\n"
            - Environment="https_proxy=http://
            - Fn::Select:
              - '1'
              - Fn::Split:
                - ':'
                - Fn::Select:
                  - '0'
                  - Fn::GetAtt:
                    - PuntoEnlace
                    - DnsEntries
            - ":3128\"\n"
            - "Environment=\"no_proxy=169.254.169.254\"\n"
            - "EOF\n"
            - "sudo systemctl daemon-reload\n"
            - "systemctl restart amazon-ssm-agent\n"
            - "yum install -y\n"
            - "yum install lynx -y\n"
      Tags:
      - Key: Name
        Value:
          Fn::Sub:
          - proxy-client-${nombreVPC}
          - nombreVPC:
              Fn::GetAtt:
              - VPCCliente
              - Outputs.VPC
Outputs:
  ProxyNLB:
    Description: Punto de entrada al servicio Proxy
    Value:
      Fn::GetAtt:
      - nlb
      - DNSName
  ProxyServicioPuntoEnlace:
    Description: Servicio de punto de enlace del NLB
    Value:
      Fn::Select:
      - '1'
      - Fn::Split:
        - ':'
        - Fn::Select:
          - '0'
          - Fn::GetAtt:
            - PuntoEnlace
            - DnsEntries
  IdCliente:
    Description: ID de la instancia cliente HTTP
    Value:
      Ref: cliente
